<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="Nguyên Tố"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_elements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_element_fire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_fire" />

                <CheckBox
                    android:id="@+id/cb_element_water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_water" />

                <CheckBox
                    android:id="@+id/cb_element_earth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_earth" />

                <CheckBox
                    android:id="@+id/cb_element_air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/element_air" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="Hành Tinh"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_planets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_planet_mercury"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_mercury" />

                <CheckBox
                    android:id="@+id/cb_planet_venus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_venus" />

                <CheckBox
                    android:id="@+id/cb_planet_earth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_earth" />

                <CheckBox
                    android:id="@+id/cb_planet_mars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_mars" />

                <CheckBox
                    android:id="@+id/cb_planet_jupiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_jupiter" />

                <CheckBox
                    android:id="@+id/cb_planet_saturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_saturn" />

                <CheckBox
                    android:id="@+id/cb_planet_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_sun" />

                <CheckBox
                    android:id="@+id/cb_planet_moon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_moon" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="Hoàng Đạo"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_zodiac_aries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_aries" />

                <CheckBox
                    android:id="@+id/cb_zodiac_taurus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_taurus" />

                <CheckBox
                    android:id="@+id/cb_zodiac_gemini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_gemini" />

                <CheckBox
                    android:id="@+id/cb_zodiac_cancer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_cancer" />

                <CheckBox
                    android:id="@+id/cb_zodiac_leo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_leo" />

                <CheckBox
                    android:id="@+id/cb_zodiac_virgo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_virgo" />

                <CheckBox
                    android:id="@+id/cb_zodiac_libra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_libra" />

                <CheckBox
                    android:id="@+id/cb_zodiac_scorpio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_scorpio" />

                <CheckBox
                    android:id="@+id/cb_zodiac_sagittarius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_sagittarius" />

                <CheckBox
                    android:id="@+id/cb_zodiac_capricorn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_capricorn" />

                <CheckBox
                    android:id="@+id/cb_zodiac_aquarius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_aquarius" />

                <CheckBox
                    android:id="@+id/cb_zodiac_pisces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zodiac_pisces" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnApplyFilter"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Tìm kiếm" />

            <Button
                android:id="@+id/btnFilterDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Mặc định" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
